--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.13.2
+asn1crypto==1.5.1
 blinker==1.8.2
 click==8.1.7
 dnspython==2.6.1
@@ -16,10 +17,13 @@ Jinja2==3.1.4
 Mako==1.3.5
 MarkupSafe==2.1.5
 packaging==24.1
+pg8000==1.31.2
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+python-dateutil==2.9.0.post0
+scramp==1.4.5
+six==1.16.0
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
 Werkzeug==3.0.4
 WTForms==3.1.2
-p8000
