--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ alembic==1.13.2
 asn1crypto==1.5.1
 blinker==1.8.2
 click==8.1.7
+colorama==0.4.6
+Cython==3.0.11
+Deprecated==1.2.14
+distlib==0.3.8
 dnspython==2.6.1
 email_validator==2.2.0
+filelock==3.16.1
 Flask==3.0.3
+Flask-Limiter==3.8.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
@@ -12,18 +18,34 @@ Flask-WTF==1.2.1
 greenlet==3.1.1
 gunicorn==23.0.0
 idna==3.10
+importlib_resources==6.4.5
 itsdangerous==2.2.0
 Jinja2==3.1.4
+limits==3.13.0
 Mako==1.3.5
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
+mdurl==0.1.2
+meson==1.5.2
+numpy==2.1.1
+ordered-set==4.1.0
 packaging==24.1
 pg8000==1.31.2
+ping3==4.0.8
+platformdirs==4.3.6
 psycopg2==2.9.9
 psycopg2-binary==2.9.9
+Pygments==2.18.0
+pyngrok==7.2.0
 python-dateutil==2.9.0.post0
+PyYAML==6.0.2
+rgbprint==4.0.2
+rich==13.9.2
 scramp==1.4.5
 six==1.16.0
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
+virtualenv==20.26.5
 Werkzeug==3.0.4
+wrapt==1.16.0
 WTForms==3.1.2
